--- a/HomeWork_StaticMethod/Index.html
+++ b/HomeWork_StaticMethod/Index.html
@@ -7,6 +7,20 @@
     <title>HomeWork_StaticMethod</title>
 </head>
 <body>
+    <form id="productForm">
+        <label for="productName">Название товара:</label>
+        <input type="text" id="productName" required>
+        <label for="productPrice">Цена товара:</label>
+        <input type="number" id="productPrice" required>
+        <label for="productCount">Колличество товара:</label>
+        <input type="number" id="productCount" required>
+        <button type="submit", class="buttonSibmit">Добавить товар</button>
+      </form>
+      <input type="text", id="searchInput" placeholder="Поиск...">
+
+      <ul id="productList"></ul>
+      <div id="totalCost"></div>
+     
     
 
 
